feat: 替换 JPA 为 MyBatis Plus
- 移除 spring-boot-starter-data-jpa，新增 mybatis-plus-spring-boot3-starter
- 更新实体类注解从 JPA 到 MyBatis Plus (@Entity -> @TableName, etc.)
- 删除 repository 层，新增 mapper 层
- 更新服务层和控制器层使用 Mapper 接口
- 修复登录时角色和权限加载问题
- 优化 CORS 配置，支持端口 5174
- 新增 CHANGELOG.md 和 VERSION-UPDATE-v1.1.0.md

Co-Authored-By: Claude Opus 4.6 <noreply@anthropic.com>